<resources>
    <string name="app_name">myfiledemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="empty">Empty</string>
    <string name="btn_cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="lbl_move">Move</string>
    <string name="action_save">Save</string>
    <string name="action_change_text_size">Change text size</string>
    <string name="action_change_background_color">Change background color</string>
    <string name="action_change_text_color">Change text color</string>
    <string name="btn_confirm">Confirm</string>
    <string name="msg_prompt_save_text_file">Save text file</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="cant_open_this_file">Can\'t open this file</string>
    <string name="there_are_no_app_to_open_it">There are no apps to open it</string>
    <string name="extract">Extract</string>
    <string name="bnt_ok">Ok</string>
    <string name="do_you_want_to_extract">"Do you want to extract %1$s ?"</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_images">Images</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_audio">Audio</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_download">Downloads</string>
    <string name="menu_internal_storage">Internal Storage</string>
    <string name="menu_external_storage">External Storage</string>
    <string name="folder_name">Folder Name</string>
    <string name="photos_name">Photo Name</string>
</resources>