<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_file_back_ground_color">

    <TextView
        android:id="@+id/tv_file_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:maxLines="1"
        android:padding="8dp"
        android:textAllCaps="false"
        android:textSize="13sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_home"
        android:layout_above="@+id/id_layout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_file_path"
        android:scrollbars="vertical"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/no_media_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:alpha="0.4"
            android:background="@drawable/ic_no_media" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/color_text_selected"
            android:text="@string/no_media_found"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/id_layout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_footer_layout"
        android:padding="5dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/id_copy_file"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/ripple_effect"
            android:padding="5dp"
            android:src="@drawable/ic_file_copy" />

        <ImageView
            android:id="@+id/id_delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ripple_effect"
            android:padding="5dp"
            android:src="@drawable/ic_outline_delete_outline_24" />

        <ImageView
            android:id="@+id/id_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/ripple_effect"
            android:padding="5dp"
            android:src="@drawable/ic_menu" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fileCopyLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_footer_layout"
        android:weightSum="2"
        android:visibility="gone">

        <TextView
            android:id="@+id/id_copy_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/btn_cancel"
            />

        <TextView
            android:id="@+id/id_copy"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/copy"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fileMoveLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_footer_layout"
        android:weightSum="2"
        android:visibility="gone">

        <TextView
            android:id="@+id/id_move_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/btn_cancel"
            />

        <TextView
            android:id="@+id/id_move"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/lbl_move"
            />
    </LinearLayout>

</RelativeLayout>